# ghcjs-typeahead

./: .gitignore  .gitmodules  README.md  build.sh  ghcjs-typeahead.cabal  shell.nix  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Typeahead/: Config.hs  Input.hs
test/js-typeahead/: bower.json  index.html
www/: bower.json  index.html
