name:                ghcjs-typeahead
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mckeankylej/ghcjs-typeahead#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Typeahead.Config
                     , Typeahead.Input
  build-depends:       base >= 4.7 && < 5
                     , reflex == 0.5.*
                     , reflex-dom == 0.4.*
                     , lens >= 4.7 && < 5
                     , mono-traversable == 1.*
                     , text == 1.2.*
                     , data-default >= 0.7.1.1
  default-language:    Haskell2010

executable ghcjs-typeahead-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-typeahead
                     , reflex-dom == 0.4.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/ghcjs-typeahead